# CM3Leon

./: .gitignore  README.md  example.py  generate_example.py  google_colab.ipynb  img_embeds.py  pyproject.toml  requirements.txt
CM3LEON/: model.py
CM3LEON/andromeda/: __init__.py  model.py  train_distributed.py  training.py
CM3LEON/andromeda/finetuning/: README.md
CM3LEON/andromeda/optimus_prime/: __init__.py  x_transformers.py  xl_autoregressive_wrapper.py
CM3LEON/andromeda/utils/: decoupled_optimizer.py  stable_adamw.py
cm3/: __init__.py  model.py  tokenize.py  tokenizer.py  train.py
cm3/andromeda/: README.md  build_dataset.py  inference.py  model.py  train_distributed.py  train_distributed_accelerate.py  training.py
cm3/andromeda/old/: sophia.py  training.py  training_1.py  training_sophia.py
cm3/andromeda/optimus_prime/: __init__.py  autoregressive_wrapper.py  nonautoregressive_wrapper.py  x_transformers.py  xl_autoregressive_wrapper.py
cm3/andromeda/utils/: rf_utils.py  stable_adamw.py
cm3/core/: __init__.py  attend.py  autoregressive_wrapper.py  flash.py  model.py  transformer.py
cm3/utils/: stable_adamw.py
