[tool.poetry]
name = "cm3"
version = "0.1.8"
description = "Description of the cm3 package"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = { version = "*", source = "torch_nightly" }
lion-pytorch = "*"
numpy = "*"
einops = "*"
accelerate = "*"
transformers = "*"
SentencePiece = "*"
bitsandbytes = "*"
datasets = "*"
triton = "*"
deepspeed = "*"
memory-profiler = "*"
zetascale = "*"

[[tool.poetry.source]]
name = "torch_nightly"
url = "https://download.pytorch.org/whl/nightly/cu118/torch_nightly.html"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
